# semantic-forest

./: .env.example  .gitignore  README.md
model_playground/rock_paper_scissors/: README.md  pyproject.toml
model_playground/rock_paper_scissors/rock_paper_scissors/: main.py  rock_paper_scissors.py  rock_paper_scissors_model.py
semantic_forest_website_examples/: README.md  pyproject.toml
semantic_forest_website_examples/semantic_forest_website_examples/: best_practice_debugging.py  embeddings.py  language_heuristics.py  logprobs_confidence.py  logprobs_perplexity.py  role_play_loop_holes.py  semantic_measurements.py
