[tool.poetry]
name = "semantic-forest-website-examples"
version = "0.1.0"
description = ""
authors = ["jamespearce12345 <james.pearce@15gifts.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^2.15.0"
scipy = "^1.17.0"
textstat = "^0.7.12"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
